--- a/evo/templates/evo/index.html
+++ b/evo/templates/evo/index.html
@@ -1,1 +1,7 @@
 hello world
+
+
+<form class="form" action-"start/" method="post">
+  {% csrf_token %}
+  <input type="submit" class="btn btn-primary">Start</input>
+</form>
