--- a/evo/templates/evo/evo.html
+++ b/evo/templates/evo/evo.html
@@ -1,1 +1,12 @@
+{% load static %}
+<head>
+  <link href="{% static 'evo/css/bootstrap.min.css' %}" rel="stylesheet">
+  <script src="{% static 'evo/js/bootstrap.min.js' %}"></script>
+</head>
+
 evolutioooooooooooooooooon
+<div class="progress">
+    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+      40%
+  </div>
+</div>
