--- a/evo/templates/evo/evo.html
+++ b/evo/templates/evo/evo.html
@@ -9,4 +9,14 @@ evolutioooooooooooooooooon
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
       40%
   </div>
+
+  <table>
+  {% for team in report %}
+  <tr class"table-striped">
+    {% for pokemon in team %}
+      <td> {{ pokemon }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+  </table>
 </div>
