--- a/evo/templates/evo/evo.html
+++ b/evo/templates/evo/evo.html
@@ -1,22 +1,36 @@
+<!DOCTYPE html>
+<html>
 {% load static %}
 <head>
   <link href="{% static 'evo/css/bootstrap.min.css' %}" rel="stylesheet">
-  <script src="{% static 'evo/js/bootstrap.min.js' %}"></script>
-</head>
 
+</head>
+<body>
 evolutioooooooooooooooooon
-<div class="progress">
-    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-      40%
+<div class="container">
+  <div class="progress">
+    <div class="row">
+      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+          40%
+      </div>
+    </div>
   </div>
 
-  <table>
-  {% for team in report %}
-  <tr class"table-striped">
-    {% for pokemon in team %}
-      <td> {{ pokemon }} </td>
-    {% endfor %}
-  </tr>
-  {% endfor %}
-  </table>
+    <div class="row">
+        <table class="table">
+        {% for team in report %}
+        <tr>
+          {% for pokemon in team %}
+          <td> 
+            <img src="https://img.pokemondb.net/sprites/black-white/normal/{{ pokemon|lower }}.png">
+            {{ pokemon }}</td>
+          {% endfor %}
+        </tr>
+        {% endfor %}
+        </table>
+    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="{% static 'evo/js/bootstrap.min.js' %}"></script>
+</body>
+</html>
